--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -217,6 +217,22 @@
     <Compile Include="Migrations\201612290945586_InsertMovies.Designer.cs">
       <DependentUpon>201612290945586_InsertMovies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701031243441_AddGanreInMigration.cs" />
+    <Compile Include="Migrations\201701031243441_AddGanreInMigration.Designer.cs">
+      <DependentUpon>201701031243441_AddGanreInMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701031809449_CreateMovieAndGanreInDbEmpty.cs" />
+    <Compile Include="Migrations\201701031809449_CreateMovieAndGanreInDbEmpty.Designer.cs">
+      <DependentUpon>201701031809449_CreateMovieAndGanreInDbEmpty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701031854042_CreateIdentityMovieAndGanreFields1.cs" />
+    <Compile Include="Migrations\201701031854042_CreateIdentityMovieAndGanreFields1.Designer.cs">
+      <DependentUpon>201701031854042_CreateIdentityMovieAndGanreFields1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701031915525_InsertMoviesSecond.cs" />
+    <Compile Include="Migrations\201701031915525_InsertMoviesSecond.Designer.cs">
+      <DependentUpon>201701031915525_InsertMoviesSecond.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -226,6 +242,8 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -281,6 +299,8 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -331,6 +351,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612290945586_InsertMovies.resx">
       <DependentUpon>201612290945586_InsertMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701031243441_AddGanreInMigration.resx">
+      <DependentUpon>201701031243441_AddGanreInMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701031809449_CreateMovieAndGanreInDbEmpty.resx">
+      <DependentUpon>201701031809449_CreateMovieAndGanreInDbEmpty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701031854042_CreateIdentityMovieAndGanreFields1.resx">
+      <DependentUpon>201701031854042_CreateIdentityMovieAndGanreFields1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701031915525_InsertMoviesSecond.resx">
+      <DependentUpon>201701031915525_InsertMoviesSecond.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
