--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Models\Ganre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
