--- a/Vidly/packages.config
+++ b/Vidly/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AutoMapper" version="4.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="EntityFramework.ru" version="6.0.0" targetFramework="net45" />
@@ -18,6 +19,10 @@
   <package id="Microsoft.AspNet.Razor.ru" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
