--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -256,6 +256,10 @@
     <Compile Include="Migrations\201701031915525_InsertMoviesSecond.Designer.cs">
       <DependentUpon>201701031915525_InsertMoviesSecond.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701061338371_SeedUsers.cs" />
+    <Compile Include="Migrations\201701061338371_SeedUsers.Designer.cs">
+      <DependentUpon>201701061338371_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -562,6 +566,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701031915525_InsertMoviesSecond.resx">
       <DependentUpon>201701031915525_InsertMoviesSecond.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701061338371_SeedUsers.resx">
+      <DependentUpon>201701061338371_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
