Add driving license to user.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -260,6 +260,10 @@
     <Compile Include="Migrations\201701061338371_SeedUsers.Designer.cs">
       <DependentUpon>201701061338371_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701061858008_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201701061858008_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201701061858008_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -571,6 +575,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701061338371_SeedUsers.resx">
       <DependentUpon>201701061338371_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701061858008_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201701061858008_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
